mobile-device fix

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div id="plan">
           <span>Anual Plan</span>
           <p>$59.99/year</p>
-          <a href="">Change</a>
+          <p id="change" href="">Change</p>
         </div>
       </div>
 
